--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                     <a href="index.html"><img src="images/parteArriba.webp"></a>
                 </div>
 
-                <div class="main-element menu">
-                    <a class="join" href="#"><i>Únete</i></a> 
-                    <a class="dates" href="#"><i>Fechas</i></a> 
-                    <a class="who" href="#"><i>Quiénes Somos</i></a> 
-                </div>
+                <nav class="main-element menu">
+                    <ul>
+                        <li><a href="#">Únete</a> </li>
+                        <li><a href="#">Fechas</a> </li>
+                        <li><a href="#">Quiénes Somos</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
 
@@ -40,7 +42,7 @@
             
             
             <!--<div class="image general">
-                <img src="images/Movida.webp">
+                <img src="images/fondo.jpg">
                 <div class="image-down__description">
                     <p>Somos los mejores</p>
                 </div>
