--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <main>
             
             
-            <!--<div class="image general">
-                <img src="images/fondo.jpg">
-                <div class="image-down__description">
+            <div class="image-down">
+                <img src="images/Movida.webp">
+                <div class="image-down__text">
                     <p>Somos los mejores</p>
                 </div>
-            </div>-->
+            </div>
             <div class="main-element new">
                 <div class="new__first">
                     <img src="images/movida2.webp"><p>Novedades de Marzo</p>
