--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 </div>
             </div>
             <div class="main-element new">
-                <div class="new__first">
+                <div class="new__element">
                     <img src="images/movida2.webp"><p>Novedades de Marzo</p>
                 </div>
-                <div class="new__second">
+                <div class="new__element">
                     <img src="images/movida2.webp"><p>Novedades de Enero</p>
                 </div>
-                <div class="new__third">
+                <div class="new__element">
                     <img src="images/movida2.webp"><p>Novedades de Diciembre</p>
                 </div>
             </div> 
@@ -61,24 +61,27 @@
                 <div class="down__text">
                     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </div>
-                <div class="down__img">
-                    <img src="images/llanes.webp">
+                <div class="services__image">
+                    <model-viewer id="toggle-model" src="3d/scene.glb" alt="A 3D model of a shishkebab" shadow-intensity="1" auto-rotate></model-viewer>
                 </div>
             </div>
         </main>
 
         <footer>
-            <div class="footer-element copyright">
-                <p>@2048</p>
-            </div>
             <div class="footer-element author">
                 <a href="https://thispersondoesnotexist.com/"><p>Ponte en contacto con nosotres</p></a>
+            </div>
+            <div class="footer-element copyright">
+                <p>@2048</p>
             </div>
         </footer>
             
         <script src="js/main.js"></script>
 
+        <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+        
         <script>
             WebFont.load({
                 google: {
